[gd_scene load_steps=2 format=3 uid="uid://cyl7c25ln4l6h"]

[ext_resource type="Script" path="res://new_src/objects/event_scene/event_scene.gd" id="1_jt705"]

[node name="event" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.5
offset_top = -294.0
offset_right = 328.5
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jt705")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="display_title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Event Name"
horizontal_alignment = 1

[node name="display_description" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 12.8
text = "Something
Written
Here
Abou
Description
Etc."

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="option_1" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "option 1"

[node name="option_2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "option 2"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "Your New Name:"

[node name="name_enter" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
placeholder_text = "Name Here"

[connection signal="button_up" from="VBoxContainer/HBoxContainer/option_1" to="." method="_on_option_1_button_up"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/option_1" to="." method="option_1_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/option_1" to="." method="option_1_mouse_exit"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/option_2" to="." method="_on_option_2_button_up"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/option_2" to="." method="option_2_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/option_2" to="." method="option_2_mouse_exit"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/name_enter" to="." method="_on_name_enter_text_changed"]
